# call-fraud-detector

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  USAGE.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_call_status.py  003_add_profiles.py
src/call_analyzer/: analyzer.py  api.py  app.py  audio.py  cli.py  config.py  database.py  gemini_client.py  models.py  notifications.py  watcher.py  web.py  worker.py
src/call_fraud_detector/: analyzer.py  api.py  app.py  cli.py  config.py  database.py  external_storage.py  gemini_client.py  models.py  notifications.py  watcher.py  web.py  worker.py
templates/: base.html  call_detail.html  calls.html  index.html  profile_form.html  profiles.html
templates/partials/: analysis_result.html  call_row.html  json_sections.html
tests/: test_analyzer.py  test_api.py  test_audio.py  test_config.py  test_integration.py
