[project]
name = "call-fraud-detector"
version = "0.1.0"
description = "Call fraud detection system using Gemini AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "watchdog>=6.0",
    "psycopg2-binary>=2.9",
    "aiosmtplib>=3.0",
]

[project.scripts]
cfd = "call_fraud_detector.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]
